--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
-    "nodemon": "^3.1.0"
+    "nodemailer": "^6.9.11",
+    "nodemon": "^3.1.0",
+    "uuid": "^9.0.1",
+    "validatorjs": "^3.22.1"
   }
 }
