--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.11",
     "nodemon": "^3.1.0",
+    "sslcommerz-lts": "^1.1.0",
     "uuid": "^9.0.1",
     "validatorjs": "^3.22.1"
   }
